--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -1,35 +1,39 @@
-name: Laravel
+name: PHP Composer CI
 
 on:
   push:
-    branches: [ "master" ]
+    branches:
+      - master
   pull_request:
-    branches: [ "master" ]
 
 jobs:
-  laravel-tests:
-
+  build:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
-      with:
-        php-version: '8.0'
-    - uses: actions/checkout@v4
-    - name: Copy .env
-      run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-    - name: Install Dependencies
-      run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
-    - name: Generate key
-      run: php artisan key:generate
-    - name: Directory Permissions
-      run: chmod -R 777 storage bootstrap/cache
-    - name: Create Database
-      run: |
-        mkdir -p database
-        touch database/database.sqlite
-    - name: Execute tests (Unit and Feature tests) via PHPUnit/Pest
-      env:
-        DB_CONNECTION: sqlite
-        DB_DATABASE: database/database.sqlite
-      run: php artisan test
+      # Step 1: Checkout repository code
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      # Step 2: Setup PHP environment
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.2' # Versi PHP yang sesuai
+          extensions: ctype, curl, dom, fileinfo, filter, hash, json, libxml, mbstring, openssl, pcre, session, tokenizer, xml, xmlwriter
+          ini-values: |
+            memory_limit=-1
+          coverage: none
+
+      # Step 3: Validate PHP version and extensions
+      - name: Check PHP platform requirements
+        run: composer check-platform-reqs
+
+      # Step 4: Install Composer dependencies
+      - name: Install dependencies
+        run: composer install --prefer-dist --no-progress --no-suggest --no-scripts
+
+      # Step 5: Run additional Composer scripts (if any)
+      # Uncomment the following lines if your `composer.json` has custom scripts
+      # - name: Run Composer scripts
+      #   run: composer run-script post-install-cmd
