--- a/.env.example
+++ b/.env.example
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=mysql
+DB_HOST=mysql_container
 DB_PORT=3306
 DB_DATABASE=db_antrian
-DB_USERNAME=root
-DB_PASSWORD=root_password
+DB_USERNAME=
+DB_PASSWORD=root
 
 
 BROADCAST_DRIVER=log
