--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,7 @@ DB_CONNECTION=mysql
 DB_HOST=mysql_container
 DB_PORT=3306
 DB_DATABASE=db_antrian
-DB_USERNAME=
+DB_USERNAME=root
 DB_PASSWORD=root
 
 
