--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME=Antrian
 APP_ENV=local
 APP_KEY=base64:lBMu+nRy4I3ywgFOA+eTEZ4uZ9XuaMggm1DpvCs/QGE=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
