--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -12,6 +12,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    
     - name: Setup PHP
       uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
       with:
@@ -20,9 +21,14 @@ jobs:
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
     
-    - name: Install Dependencies
+    
+    - name: Install Dependencies (composer install)
       run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
     
+ 
+    - name: Update Dependencies (composer update)
+      run: composer update --no-ansi --no-interaction --no-scripts --no-progress
+
     - name: Generate key
       run: php artisan key:generate
     
